Добавила класс Game, исправила змею и всё смежное